# algo-trading

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: architect.md  backtest-engineer.md  data-engineer.md  execution-engineer.md  qa-reviewer.md  quant-researcher.md  risk-engineer.md
.github/workflows/: ci.yml
docs/: adding-a-strategy.md
research/: README.md  hypothesis-template.md
specs/: 00-overview.md  01-architecture.md  02-data-agent.md  03-strategy-agent.md  04-backtest-agent.md  05-risk-agent.md  06-execution-agent.md  07-monitoring-agent.md  08-orchestrator.md  09-engineering-loop.md  DECISIONS.md
src/algotrade/: __init__.py
src/algotrade/backtest/: __init__.py  accounting.py  config.py  lookahead.py  metrics.py  monte_carlo.py  nautilus_adapter.py  report.py  runner.py  sweep.py  walk_forward.py
src/algotrade/config/: __init__.py  settings.py
src/algotrade/data/: __init__.py  features.py  ingest.py  integrity.py  parquet_feed.py  storage.py
src/algotrade/domain/: __init__.py  dto.py  enums.py  errors.py
src/algotrade/interfaces/: __init__.py  protocols.py
src/algotrade/orchestrator/: __init__.py  wiring.py
src/algotrade/risk/: __init__.py  chain.py  checks.py  config.py  halt.py  sizing.py  state.py
src/algotrade/strategy/: __init__.py  registry.py  sma_cross.py
tests/: conftest.py  fakes.py
tests/unit/: test_architecture.py
tests/unit/backtest/: test_accounting.py  test_lookahead.py  test_metrics.py  test_monte_carlo.py  test_report.py  test_runner.py  test_sweep.py  test_walk_forward.py
(+17 files in other folders)
