[project]
name = "algotrade"
version = "0.1.0"
description = "Agent-structured algorithmic trading system (research -> backtest -> paper -> live)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "polars>=1.42.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/algotrade"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["algotrade"]
plugins = ["pydantic.mypy"]
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: touches real I/O or external services; excluded from the fast CI gate",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["algotrade"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "\\.\\.\\."]
